deploy/ngsadev/ngsa/dev/ngsa-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ngsa-sidecar-log
  namespace: ngsa
spec:
  # Applying to all sidecars in ngsa namespace
  # If want to apply to a specific pod/deployment
  # Uncomment the lines below and use label properly
  # workloadSelector:
  #   labels:
  #     app: ngsa-memory
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              log_format: 
                json_format:
                  Date: "%START_TIME%"
                  LogName: "Istio.envoy-proxy"
                  StatusCode: "%RESPONSE_CODE%"
                  TTFB: ""
                  Duration: "%DURATION%"
                  Verb: "%REQ(:METHOD)%"
                  Path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  Host: "%REQ(:AUTHORITY)%"
                  ClientIP: "%UPSTREAM_LOCAL_ADDRESS%"
                  XFF: "%REQ(X-FORWARDED-FOR)%"
                  UserAgent: "%REQ(USER-AGENT)%"
                  CVector: ""
                  CVectorBase: ""
                  Category: "istio"
                  Subcategory: "envoy-sidecar-proxy"
